<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    tools:context=".ui.thirdscreen.ThirdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/score_title_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candal"
            android:text="@string/scoreTitle"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_count_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/candal"
            android:text="@string/emptyScore"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hs_title_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candal"
            android:text="@string/highScoreTitle"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hs_count_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/candal"
            android:text="@string/emptyScore"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_play_again"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/yellow"
            android:elevation="10dp"
            android:fontFamily="@font/candal"
            android:text="@string/playAgain"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/button_menu"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/button_color"
            android:elevation="10dp"
            android:fontFamily="@font/candal"
            android:text="@string/menu"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="50dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>